Continue working on the UI.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@psionic/emit": "^0.0.2",
+    "@psionic/emit-react": "^0.0.3",
     "@psionic/ui": "^1.10.0",
     "inquirer": "^9.2.16",
     "ws": "^8.16.0"
