--- a/ui/package.json
+++ b/ui/package.json
@@ -46,7 +46,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "@psionic/emit": "^0.0.2",
+    "@psionic/emit-react": "^0.0.3",
+    "@psionic/ui": "^1.10.0",
+    "framer-motion": "^11.0.20",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
