--- a/package.json
+++ b/package.json
@@ -12,9 +12,31 @@
     "postinstall": "npm run install-ui"
   },
   "dependencies": {
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "@psionic/emit": "^0.0.2",
+    "@psionic/emit-react": "^0.0.3",
+    "@psionic/ui": "^1.10.0",
+    "framer-motion": "^11.0.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.71.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "builder": "^5.0.0",
+    "concurrently": "^8.0.1",
+    "cross-env": "^7.0.3",
+    "electron": "^24.3.1",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "vite": "^4.3.2",
+    "wait-on": "^7.0.1"
   }
 }
