Switch to only publishing the prod build of the GUI.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "framework/index.js",
   "scripts": {
     "install-ui": "cd ui && npm install --legacy-peer-deps",
-    "start": "cd ui && npm run dev",
-    "postinstall": "npm run install-ui"
+    "start": "cd ui && npm run start-gui",
+    "postinstall": "npm run install-ui",
+    "prepare": "cd ui && npm run build"
   },
   "dependencies": {
     "ws": "^8.16.0"
