--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,10 @@
     ]
   },
   "dependencies": {
+    "electron": "^24.3.1",
+    "vite": "^4.3.2"
+  },
+  "devDependencies": {
     "@psionic/emit": "^0.0.2",
     "@psionic/emit-react": "^0.0.3",
     "@psionic/ui": "^1.10.0",
@@ -47,21 +51,15 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.71.1",
-    "vite-plugin-svgr": "^4.2.0"
-  },
-  "devDependencies": {
+    "vite-plugin-svgr": "^4.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "builder": "^5.0.0",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
-    "electron": "^24.3.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2",
-    "wait-on": "^7.0.1"
+    "eslint-plugin-react-refresh": "^0.3.4"
   }
 }
