Refactor the command logging logic to be easier to modify in the future; remove complicated error / warning differentiation module and let library user sort it out themselves to avoid potential bugs.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "electron": "^24.3.1",
     "kill-sync": "^1.0.3",
+    "lodash": "^4.17.21",
     "vite": "^4.3.2",
     "ws": "^8.16.0"
   },
